...
        super.viewDidLoad()
        setupEnterButtonSettings()
        configureBackButton()
    }
    
    private func setupEnterButtonSettings() {
        enterButton.accessibilityIdentifier = "Authenticate"
        enterButton.layer.cornerRadius = 16
        enterButton.layer.masksToBounds = true
    }
    
    private func configureBackButton() {
        navigationController?.navigationBar.backIndicatorImage = UIImage(named: "nav_back")
...
