...
        }

        customLabel.translatesAutoresizingMaskIntoConstraints = false
        customLabel.textColor = .white
        customLabel.text = labelText

        customButton.accessibilityIdentifier = "likebutton"
        customButton.translatesAutoresizingMaskIntoConstraints = false
        customButton.isSelected = isLiked // Установка начального состояния кнопки
        let buttonImage = isLiked ? UIImage(named: "Active") : UIImage(named: "No Active")
        customButton.setImage(buttonImage, for: .normal)

        print("[ImagesListCell]: Информация - Ячейка сконфигурирована с imageURL: \(imageURL), labelText: \(labelText), isLiked: \(isLiked)")
...
